--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       <img src="logo.jpg" alt="logo" />
       <div>
         <h1>Mini Liga – Round Robin</h1>
-        <div class="subtitle">8 timova • 14 kola (home & away) • Tamna tema</div>
+        <div class="subtitle">8 timova • 14 kola (home & away) •</div>
       </div>
     </header>
 
@@ -210,7 +210,7 @@
       </div>
     </aside>
 
-    <footer class="muted">Made for GitHub Pages — stavite <code>index.html</code> i <code>logo.jpg</code> u isti folder.</footer>
+    <footer class="muted">Made for FC2026MNT
   </div>
 
   <script>
