--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
       </div>
     </aside>
 
-    <footer class="muted">Real-time sinhronizacija • Svi uređaji vide iste rezultate • Šifra za brisanje: MNT123</footer>
+    <footer class="muted">Real-time sinhronizacija • </footer>
   </div>
 
   <div id="passwordModal" class="modal">
