--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 
   <script>
     // Teams
-    const TEAMS = ["Vladimir","Mirko","Uroš","Jovan","Lazar","Bojan","Mladen"];
+    const TEAMS = ["Vladimir","Mirko","Uroš","Jovan","Lazar","Mladen"];
     const PASSWORD = "MNT123";
     
     // ⚠️ ZAMENI OVO SA TVOJIM PODACIMA ⚠️
